# surec

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  copyright.txt  pyproject.toml  setup.py  shortcut.md
requirements/: core-requirements.txt  requirements.txt  server-requirements.txt  util-requirements.txt
scripts/: copyright.py
surec/: __init__.py  service.py
surec/factory/dataset/: base.py
surec/factory/processor/: base.py
surec/factory/trainer/: base.py
surec/market/: cart.py
surec/market/bundler/: auto.py  base.py  manual.py
surec/product/model/: base.py
surec/product/unit/: base.py
surec/recommender/: __init__.py
surec/registry/: __init__.py  model_registry.py
surec/tutorial/: example_data.py
