[tool.poetry]
name = "surec"
version = "0.1.0"
description = ""
authors = ["zzakjista"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.0"
numpy = "1.26.4"
fastapi = "0.115.6"
uvicorn = "0.30.0"
loguru = "0.7.3"
pytest = "8.3.4"
pre-commit = "4.1.0"
ruff = "0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
